--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,15 @@
 <br>
 <br> <br>
 
-<input type="button" value="OnMouse Over">
+
+<input type="button" onmouseover="over()" value="OnMouse Over">
+<input type="button" onmouseout="out()" value="OnMouse Over">
+
+
+
+ <br>
  <br>
  <div id="accion">
-
  </div>
 
 </body>
