--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,15 @@
 <br> <br>
 
 
-<input type="button" onmouseover="over()" value="OnMouse Over">
-<input type="button" onmouseout="out()" value="OnMouse Over">
-
-
-
- <br>
- <br>
- <div id="accion">
+<!-- <input type="button" onmouseover="over()" value="OnMouse Over"> -->
+<p onmouseover="over()">Texto del hacker!!</p>
+<br>
+<div id="accion"></div>
+<br>
+<!-- <input type="button" onmouseout="out()" value="OnMouse Over"> -->
+<p onmouseout="out()">Texto del hacker!!</p>
+<br>
+ <div id="accin">
  </div>
 
 </body>
